--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "formik": "^2.2.5",
     "jquerry": "^2.0.0",
     "jquery": "^3.5.1",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
